--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Kerupuk</h2>
                   <p class="item-intro text-muted">UMKM Kerupuk Desa Jatirejo</p>
-                  <img class="img-fluid d-block mx-auto" src="img/umkm/kerupukk.jpg" alt="">
+                  <img class="img-fluid d-block mx-auto" src="img/umkm/Kerupukk.jpg" alt="">
                   <p class="text-left"><p>Klik untuk membeli produk <a href="https://wa.me/6285784831365"><b>Pesan atau Beli</b></a></p>
                     <br/> <b>Komposisi:</b>
                     <br>Ikan Jenggalak, Tepung Tapioka, Bawang Putih, Garam dan Penyedap Rasa 
